--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,19 +32,76 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
     // smack api
-    compile "org.igniterealtime.smack:smack-java7:4.2.0"
-    // Optional for XMPPTCPConnection
-    compile "org.igniterealtime.smack:smack-tcp:4.2.0"
-    // Optional for XMPP-IM (RFC 6121) support (Roster, Threaded Chats, …)
-    compile "org.igniterealtime.smack:smack-im:4.2.0"
-    // Optional for XMPP extensions support
-    compile "org.igniterealtime.smack:smack-extensions:4.2.0"
+
+    //    compile ("org.igniterealtime.smack:smack-java7:4.2.0") {
+
+    //        exclude group: 'xpp3', module : 'xpp3'
+
+    //    }
+
+    ////    // Optional for XMPPTCPConnection
+
+    //    compile ("org.igniterealtime.smack:smack-tcp:4.2.0") {
+
+    //        exclude group: 'xpp3', module : 'xpp3'
+
+    //    }
+
+    //    // Optional for XMPP-IM (RFC 6121) support (Roster, Threaded Chats, …)
+
+    //    compile "org.igniterealtime.smack:smack-im:4.2.0"
+
+    //    // Optional for XMPP extensions support
+
+    //    compile "org.igniterealtime.smack:smack-extensions:4.2.0"
+
+    //    compile "org.igniterealtime.smack:smack-bosh:4.1.7"
+
+    //    compile "org.igniterealtime.smack:smack-android:4.1.3"
+
+    //    compile "org.igniterealtime.smack:smack-bosh:4.1.3"
+
+    //    compile "org.igniterealtime.smack:smack-tcp:4.1.3"
+
+    //    compile "org.igniterealtime.smack:smack-im:4.1.3"
+
+    //    compile "org.jxmpp:jxmpp-jid:0.5.0-alpha6"
+
+    //    compile "org.igniterealtime.smack:smack-extensions:4.1.3"
+
+    //    compile "org.igniterealtime.smack:smack-android-extensions:4.1.0"
+
+    //    compile "org.igniterealtime.smack:smack-experimental:4.1.0"
+
+    //    compile "org.igniterealtime.smack:smack-tcp:4.1.0"
+
+        // basic
+
+        dependencies {
+
+            compile "org.igniterealtime.smack:smack-android:4.2.0"
+
+            compile "org.igniterealtime.smack:smack-tcp:4.2.0"
+            compile "org.igniterealtime.smack:smack-experimental:4.2.0"
+
+        }
+
+    // extensions
+
+    //    dependencies {
+
+    //        compile "org.igniterealtime.smack:smack-android-extensions:4.2.0"
+
+    //        compile "org.igniterealtime.smack:smack-tcp:4.2.0"
+
+    //    }
+
 
 }
